Update the pom not to depend on spark-sql by default.